--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,7 @@
 # BlueJ files
 *.ctxt
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Package Files #
-*.jar
 *.war
 *.nar
 *.ear
@@ -21,3 +17,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+/test-output/
+/.classpath
+/*.project
+/.settings
